{
  "version": 4,
  "terraform_version": "0.13.6",
  "serial": 63,
  "lineage": "ce5f18e9-9200-2065-3b53-56da872ed062",
  "resources": [
    {
      "module": "module.InstanceCreation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "MYSQL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:966444541051:instance/i-09d755ff62f681ef3",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-09d755ff62f681ef3",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0b09b13f2e774936e",
            "private_dns": "ip-10-0-2-236.us-east-2.compute.internal",
            "private_ip": "10.0.2.236",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-05ed5103b0f9e7279",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06dc7f185f48724e1",
            "tags": {
              "Name": "MYSQL"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0473cb382df9d5848"
            ]
          },
          "dependencies": [
            "module.Security_Group_Creation.aws_security_group.terraform",
            "module.VpcModule.aws_subnet.aws_private",
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.InstanceCreation",
      "mode": "managed",
      "type": "aws_instance",
      "name": "WORDPRESS",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0a91cd140a1fc148a",
            "arn": "arn:aws:ec2:us-east-2:966444541051:instance/i-0e7ccb6510bc6268c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2c",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e7ccb6510bc6268c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "terraform",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cc04e78e8263cb0f",
            "private_dns": "ip-10-0-1-195.us-east-2.compute.internal",
            "private_ip": "10.0.1.195",
            "public_dns": "ec2-18-217-117-177.us-east-2.compute.amazonaws.com",
            "public_ip": "18.217.117.177",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ebaa4f9135a579eb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c9bec9a23117359",
            "tags": {
              "Name": "WORDPRESS"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0473cb382df9d5848"
            ]
          },
          "dependencies": [
            "module.InstanceCreation.aws_instance.MYSQL",
            "module.Security_Group_Creation.aws_security_group.terraform",
            "module.VpcModule.aws_subnet.aws_private",
            "module.VpcModule.aws_subnet.aws_public",
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.Security_Group_Creation",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:966444541051:security-group/sg-0473cb382df9d5848",
            "description": "Allow MSQL and NGINX inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0473cb382df9d5848",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "MySQL",
            "name_prefix": "",
            "owner_id": "966444541051",
            "revoke_rules_on_delete": false,
            "tags": {
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.VpcModule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:966444541051:subnet/subnet-06dc7f185f48724e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-06dc7f185f48724e1",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "966444541051",
            "tags": {
              "Name": "aws_private"
            },
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.VpcModule",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "aws_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:966444541051:subnet/subnet-09c9bec9a23117359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2c",
            "availability_zone_id": "use2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-09c9bec9a23117359",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "966444541051",
            "tags": {
              "Name": "aws_public"
            },
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.VpcModule",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:966444541051:vpc/vpc-0490a96d1442c9a15",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0af70443d6aae1384",
            "default_route_table_id": "rtb-04b885fae194f8b72",
            "default_security_group_id": "sg-0c55342a13522f6ee",
            "dhcp_options_id": "dopt-b5eb7dde",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0490a96d1442c9a15",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04b885fae194f8b72",
            "owner_id": "966444541051",
            "tags": {
              "Name": "terra"
            }
          }
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05de6a014017bc210",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-17-252-238.us-east-2.compute.amazonaws.com",
            "public_ip": "3.17.252.238",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "Public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:966444541051:internet-gateway/igw-05e46266b6d0725ed",
            "id": "igw-05e46266b6d0725ed",
            "owner_id": "966444541051",
            "tags": {
              "name": "Public_gateway"
            },
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_vpc.terra"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05de6a014017bc210",
            "id": "nat-0f41c02c03c43ce0a",
            "network_interface_id": "eni-0e27f5e0ca87953f2",
            "private_ip": "10.0.1.251",
            "public_ip": "3.17.252.238",
            "subnet_id": "subnet-09c9bec9a23117359",
            "tags": {
              "Name": "nat-gateway"
            }
          },
          "dependencies": [
            "module.VpcModule.aws_subnet.aws_public",
            "module.VpcModule.aws_vpc.terra",
            "module.gateway.aws_eip.elastic_ip"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "NAT_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0788f92ef2b463217",
            "owner_id": "966444541051",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0f41c02c03c43ce0a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "NAT-route-table"
            },
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_subnet.aws_public",
            "module.VpcModule.aws_vpc.terra",
            "module.gateway.aws_eip.elastic_ip",
            "module.gateway.aws_nat_gateway.nat_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_Public_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-03db2c66177ddd550",
            "owner_id": "966444541051",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05e46266b6d0725ed",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "route_table_Public_gateway"
            },
            "vpc_id": "vpc-0490a96d1442c9a15"
          },
          "dependencies": [
            "module.VpcModule.aws_vpc.terra",
            "module.gateway.aws_internet_gateway.Public_gateway"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "associate_routetable_to_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01914a0718f3af109",
            "route_table_id": "rtb-0788f92ef2b463217",
            "subnet_id": "subnet-06dc7f185f48724e1"
          },
          "dependencies": [
            "module.VpcModule.aws_subnet.aws_private",
            "module.VpcModule.aws_subnet.aws_public",
            "module.VpcModule.aws_vpc.terra",
            "module.gateway.aws_eip.elastic_ip",
            "module.gateway.aws_nat_gateway.nat_gateway",
            "module.gateway.aws_route_table.NAT_route_table"
          ]
        }
      ]
    },
    {
      "module": "module.gateway",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "subnet-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-016828aed7ebcd31f",
            "route_table_id": "rtb-03db2c66177ddd550",
            "subnet_id": "subnet-09c9bec9a23117359"
          },
          "dependencies": [
            "module.VpcModule.aws_subnet.aws_public",
            "module.VpcModule.aws_vpc.terra",
            "module.gateway.aws_internet_gateway.Public_gateway",
            "module.gateway.aws_route_table.route_table_Public_gateway"
          ]
        }
      ]
    }
  ]
}